# Bloom-one-vs-one-study

./: .env  .env.example  .gitignore  CLAUDE.zh.md  Claude.md  GUIDE.md  GUIDE.zh.md  Makefile  README.md  README.zh.md  docker-compose.yml  learning-log.jsonl
backend/: Dockerfile  bloom.db  pyproject.toml
backend/app/: auth.py  chat.py  config.py  courses.py  credits.py  main.py  models.py  schemas.py
backend/tests/: conftest.py
backend/tests/integration/: test_full_flow.py
backend/tests/unit/: test_auth.py  test_chat.py  test_courses.py  test_credits.py  test_lessons.py
docs/: ARCHITECTURE.md  CHANGELOG.md
example/博弈论/: 01.md
example/哲学思想实验/: syllabus.md
example/天体物理/: 01.md  syllabus.md
example/密码学/: 01.md
example/概率论直觉/: 01.md
example/混沌与复杂系统/: 01.md  syllabus.md
example/说服心理学/: syllabus.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/lib/: AuthContext.jsx  api.js
frontend/src/pages/: ChatPage.jsx  CoursePage.jsx  CreditsPage.jsx  DashboardPage.jsx  LessonPage.jsx  LoginPage.jsx  RegisterPage.jsx  SyllabusPage.jsx
博弈论/: syllabus.md
哲学思想实验/: 01.md
密码学/: syllabus.md
概率论直觉/: syllabus.md
经济学思维/: 01.md  syllabus.md
认知偏误/: 01.md  syllabus.md
说服心理学/: 01.md
进化论/: 01.md  syllabus.md
